# esp32-padlock

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml.example
src/: locked.html  main.rs  network.rs  server.rs  unlocked.html
